# sam-python312-template

./: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yaml
.github/: dependabot.yml  release.yml
.github/actions/install-pip-dependencies/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/setup-sam/: action.yml
.github/workflows/: check-vulnerabilities.yml  on_push.yml  test.yml
scripts/: deploy-dev.sh  generate_samconfig.py
src/: app.py
src/handlers/: app.py
src/v1/config/: server_info.py  settings.py
src/v1/handlers/: app.py
src/v1/middlewares/: common.py
src/v1/schemas/: common.py  errors.py  healthcheck.py
tests/unit/: test_handler.py
